chore: update index.html for improved structure and maintainability

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CHEELUXNG</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="max-w-screen-3xl min-w-screen-xs"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
