--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHEELUXNG</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Lato:wght@400;700&display=swap">
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+    
   </head>
   <body>
     <div id="app" class="max-w-screen-3xl min-w-screen-xs"></div>
